Enabled to use token from Cookie